--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -244,6 +244,7 @@
   <ol start="5">
     <li class="smaller-font">When prompted, 'allow' multiple file download and 'save' the .zip (measurements) and .txt (target curve) files on your computer</li>
     <li class="smaller-font">Start REW, go to the 'EQ' / 'House Curve', navigate to and select the 'TC_Custom.txt' file you've just saved</li>
+    <li class="smaller-font">***If you do not select a target curve, A1Evo will EQ to a flat target curve and enable dynamic EQ***</li>
     <li class="smaller-font">Open the zip file and select ALL (keyboard shortcut: "CTRL+A" for Windows / "Command+A" for Mac) the files in that folder</li>
     <li class="smaller-font">Left click on the selection and drag & drop them onto REW. Wait until all measurements are imported and 'Optimize calibration' button is enabled</li>
     <li class="smaller-font">In REW left column you should be seeing your Audyssey speaker measurements with increasing index numbers sorted in alphabetical order</li>
@@ -294,8 +295,6 @@
       "AV7704", "AV7705", "NR1608", "NR1609", "SR5012", "SR5013", "SR6012", "SR6013", "SR7011", "SR7012", "SR7013", "SR8012"];
 
     /////////////////////////// Customization parameters for enthusiasts //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-    let endFrequency = 20000;// End frequency for amplitude correction filters
-    ///////////////////////// For optimal sound quality, OCA recommends to maintain the default values above! ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
     let noInversion = false;// If true, avoids subwoofer polarity inversion. This may limit alignment options and could negatively impact sound quality
     let movieMode = false;// If true, speakers are leveled using 250-20k instead of 250-4k. This results in slightly more aggresive EQ but better channel to channel consistency
     ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -330,6 +329,7 @@
           throw new Error;
         }
         bassMode = jsonData.subwooferMode;
+        Object.freeze(bassMode);
         if (bassMode === "Directional") {
           numSub = parseInt(jsonData.subwooferNum);
         }
@@ -9759,8 +9759,10 @@ zip.file("_micCal.txt", micCal);
     function updateCheckboxStates(triggeredBy) {
       const noInversionCheckbox = document.getElementById('noInversion');
       noInversion = noInversionCheckbox.checked;
+      Object.freeze(noInversion);
       const movieModeCheckbox = document.getElementById('movieMode');
       movieMode = movieModeCheckbox.checked;
+      Object.freeze(movieMode);
     }
     async function optimizeOCA() {
       clearCommands();
@@ -9818,6 +9820,9 @@ zip.file("_micCal.txt", micCal);
       console.info("Next, transfer your preferred ady file 'as is' from MultEQ Editor app to your AV receiver as you normally would after a calibration.");
       console.log("***You may freely change crossovers in the MultEQ app or AVR if desired.***");
       console.log("***You may freely adjust the correction range in the MultEQ app if desired.***");
+      if (targetCurveName === "Flat") {
+        console.log("***Dynamic EQ is enabled! You may freely adjust DEQ Reference Level Offset on the AVR if desired.***")
+      }
       console.info("The Editor app 'after' graphs will now represent the filters being applied for each channel.");
       console.info(`*****************************************************************************************************************************************`);
       console.info("Enjoy your EVO'lved sound!");
@@ -9904,20 +9909,20 @@ zip.file("_micCal.txt", micCal);
           targetCurveName = targetCurvePath.split('\\').pop().split('.').slice(0, -1).join('.');
           Object.freeze(targetCurveName);
           console.info(`Active target curve: ${targetCurveName}`);
-          const measurements = await fetch_mREW();
-          const mCount = Object.keys(measurements).length;
-          await fetchSafe('target-level', 1, 75.0);
-          await postNext('Generate target measurement', 1);
-          targetResponse = await fetchSafe(`frequency-response?smoothing=1%2F48&ppo=96`, mCount + 1);
-          Object.freeze(targetResponse); // ensure it doesn't change once optimization starts
-          await postDelete(mCount + 1);
-        } else {
-          console.warn("Target curve not found! Browse to and select 'TC_Custom.txt' (or any other) in 'REW / EQ window / House curve'!");
-          console.log("Click 'Optimize calibration' button again when ready.");
-          document.getElementById('button2').disabled = false;
-          throw new Error;
         }
-      } else {
+        else {
+          targetCurveName = "Flat";
+          console.log("No target curve chosen - A1Evo will EQ to a flat target curve and enable dynamic EQ!");
+        }
+        const measurements = await fetch_mREW();
+        const mCount = Object.keys(measurements).length;
+        await fetchSafe('target-level', 1, 75.0);
+        await postNext('Generate target measurement', 1);
+        targetResponse = await fetchSafe(`frequency-response?smoothing=1%2F48&ppo=96`, mCount + 1);
+        Object.freeze(targetResponse); // ensure it doesn't change once optimization starts
+        await postDelete(mCount + 1);
+      }
+      else {
         console.error(`Failed to fetch target curve, please make sure to have started REW API server! HTTP status code: ${tcResponse.status}.`);
         throw new Error;
       }
@@ -10058,22 +10063,21 @@ zip.file("_micCal.txt", micCal);
         });
         await postSafe(`http://localhost:4735/measurements/${i}/ir-windows`, { addFDW: "false" }, "Update processed");
       }
-      await postSafe(`http://localhost:4735/eq/house-curve`, targetCurvePath, "House curve set");
-      await postSafe(`http://localhost:4735/eq/match-target-settings`, {
-        startFrequency: 10,
-        endFrequency: endFrequency,
-        individualMaxBoostdB: 3,
-        overallMaxBoostdB: 0,
-        flatnessTargetdB: 1,
-        allowNarrowFiltersBelow200Hz: true,
-        varyQAbove200Hz: true,
-        allowLowShelf: false,
-        allowHighShelf: false
-      }, "Update processed");
+      if (targetCurveName != "Flat") {
+        await postSafe(`http://localhost:4735/eq/house-curve`, targetCurvePath, "House curve set");
+      }
       for (let i = nSpeakers + 1; i <= nSpeakers * 2; i++) {
         console.infoUpdate(`Equalizing channel - ${commandId[i - nSpeakers]}`);
+        const isSub = commandId[i - nSpeakers].startsWith("SW");
         await fetchSafe('target-level', i, 75.0);
         await postNext('Smooth', i, { smoothing: "Var" });
+        await postSafe(`http://localhost:4735/eq/match-target-settings`, {
+          startFrequency: 10, endFrequency: 10000,
+          individualMaxBoostdB: 3, overallMaxBoostdB: isSub ? 3 : 0,
+          flatnessTargetdB: 1, allowNarrowFiltersBelow200Hz: true, varyQAbove200Hz: true,
+          allowLowShelf: false, allowHighShelf: movieMode && !isSub,
+          highShelfMin: -3, highShelfMax: 3
+        }, "Update processed");
         try {
           await postNext('Match target', i);
         }
@@ -10144,6 +10148,13 @@ zip.file("_micCal.txt", micCal);
         }
       }
     }
+    function isSingleChannel(channelCmdId) {
+      if (channelCmdId.endsWith("L") && commandId.includes(channelCmdId.slice(0, -1) + "R")) { return false; } // L and R
+      if (channelCmdId.endsWith("R") && commandId.includes(channelCmdId.slice(0, -1) + "L")) { return false; } // R and L
+      if (channelCmdId.includes("L") && commandId.includes(channelCmdId.replace("L", "R"))) { return false; } // edge case for SLA/SRA type cmdIds
+      if (channelCmdId.includes("R") && commandId.includes(channelCmdId.replace("R", "L"))) { return false; } // where L/R is in the middle
+      return true;
+    }
     async function calculateRolloffs() {
       await fetchSafe('target-level', 1, 75.0);
       await postNext('Generate target measurement', 1);
@@ -10155,8 +10166,8 @@ zip.file("_micCal.txt", micCal);
       const mCount = Object.keys(snap).length;
       for (let i = nSpeakers + 2; i <= nSpeakers * 3 - 2; i += 2) {
         // check if single channel or speaker pair
-        const singleChannel = ["C", "CH", "SB", "TS"].includes(commandId[(i - nSpeakers) / 2]) || (commandId[(i - nSpeakers) / 2] === "SBL" && !commandId.includes("SBR"));
-        let cmdIds = singleChannel ? commandId[(i - nSpeakers) / 2] : `${commandId[(i - nSpeakers) / 2]} & ${commandId[1 + (i - nSpeakers) / 2]}`;
+        const singleChannel = isSingleChannel(commandId[(i - nSpeakers) / 2]);
+        const cmdIds = singleChannel ? commandId[(i - nSpeakers) / 2] : `${commandId[(i - nSpeakers) / 2]} & ${commandId[1 + (i - nSpeakers) / 2]}`;
         // rolloff determination logic
         let iXO = 80;
         let idx = i;
@@ -10282,8 +10293,8 @@ zip.file("_micCal.txt", micCal);
       const mCount = Object.keys(measurements).length;
       for (let i = nSpeakers + 2; i < mCount; i += 2) {
         // check if single channel or speaker pair
-        const singleChannel = ["C", "CH", "SB", "TS"].includes(commandId[(i - nSpeakers) / 2]) || (commandId[(i - nSpeakers) / 2] === "SBL" && !commandId.includes("SBR"));
-        let cmdIds = singleChannel ? commandId[(i - nSpeakers) / 2] : `${commandId[(i - nSpeakers) / 2]} & ${commandId[1 + (i - nSpeakers) / 2]}`;
+        const singleChannel = isSingleChannel(commandId[(i - nSpeakers) / 2]);
+        const cmdIds = singleChannel ? commandId[(i - nSpeakers) / 2] : `${commandId[(i - nSpeakers) / 2]} & ${commandId[1 + (i - nSpeakers) / 2]}`;
         // finalize xo that is closest match to target curve
         const rolloff = parseFloat(customCrossover[(i - nSpeakers) / 2]);
         let bestXo = rolloff, minRmsError= Infinity;
@@ -28703,7 +28714,7 @@ zip.file("_micCal.txt", micCal);
       }
       jsonData.dynamicVolume = false;
       jsonData.lfc = false;
-      jsonData.dynamicEq = false;
+      jsonData.dynamicEq = targetCurveName === "Flat";
       jsonData.enTargetCurveType = 1;
       jsonData.detectedChannels.forEach((channel, index) => {
         const responseData = channel.responseData;
@@ -28800,7 +28811,8 @@ zip.file("_micCal.txt", micCal);
       const hours = String(now.getHours()).padStart(2, '0');
       const minutes = String(now.getMinutes()).padStart(2, '0');
       const timestamp = `${year}-${month}${day}-${hours}${minutes}`;
-      downloadLink.download = getadyName(fileName, (movieMode ? "_Movie_" : "_") + swInvMsg + `${targetCurveName}_` + `A1Evo_${timestamp}.ady`);
+      const tcName = targetCurveName === "Flat" ? "DEQ" : targetCurveName;
+      downloadLink.download = getadyName(fileName, (movieMode ? "_Movie_" : "_") + swInvMsg + `${tcName}_` + `A1Evo_${timestamp}.ady`);
       downloadLink.style.display = "none";
       document.body.appendChild(downloadLink);
       downloadLink.click();
