shorten some log messages

--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -8726,10 +8726,10 @@ zip.file("_micCal.txt", micCal);
           });
       }
       console.log(`Congratulations! 'A1 EVO' optimization completed successfully in ${formatTime(totalTime)} on ${getCurrentDateTime()}.`);
-      console.warn("'Allow' multiple file downloads when prompted to prevent the browser from blocking saving calibrated files at the end of the optimization.");
+      console.warn("'Allow' download(s) when prompted to save the final optimized .ady file.");
       console.info(`*****************************************************************************************************************************************`);
-      console.info("When prompted, the .ady file to your PC and transfer them to your MultEQ Editor app.");
-      console.info("Next, transfer your preferred ady file 'as is' from MultEQ Editor app to your AV receiver as you normally would after a calibration.");
+      console.info("When prompted, save the .ady file to your PC and transfer it to your phone/tablet.");
+      console.info("Next, import the calibration into the MultEQ Editor App & transfer it to your AV receiver.");
       console.log("***You may freely change crossovers in the MultEQ app or AVR if desired.***");
       console.log("***You may freely adjust the correction range in the MultEQ app if desired.***");
       if (targetCurveName === "Flat") {
